[gd_scene load_steps=10 format=3 uid="uid://ptmhgyquqfrt"]

[ext_resource type="Script" uid="uid://cva4w1vpxotyw" path="res://screens/menu/menu.gd" id="1_r2y2m"]
[ext_resource type="PackedScene" uid="uid://ic48oe8q6leg" path="res://screens/menu/level_btn/level_btn.tscn" id="2_o23fe"]
[ext_resource type="Resource" uid="uid://bexhcn238tmid" path="res://data/levels/data/lev_1.tres" id="3_vjknv"]
[ext_resource type="Resource" uid="uid://tllnfgmwlx23" path="res://data/levels/data/lev_2.tres" id="4_tx854"]
[ext_resource type="Resource" uid="uid://b1tdnkjda0a7g" path="res://data/levels/data/lev_3.tres" id="5_uc8n4"]
[ext_resource type="Resource" uid="uid://bpgyyvruyx7ks" path="res://data/levels/data/lev_2_2.tres" id="6_e6wkj"]
[ext_resource type="Resource" uid="uid://e6ud4py5bfkx" path="res://data/levels/data/lev_4.tres" id="6_uc8n4"]
[ext_resource type="Resource" uid="uid://bnmhyk50l8lma" path="res://data/levels/data/lev_5.tres" id="7_bebfd"]
[ext_resource type="PackedScene" uid="uid://cyq3exju8dr1j" path="res://screens/menu/user_presenter/user_presenter.tscn" id="8_bebfd"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2y2m")

[node name="UserPresenter" parent="." instance=ExtResource("8_bebfd")]
layout_mode = 1

[node name="MusicVolumeLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 500.0
offset_top = 48.0
offset_right = 603.0
offset_bottom = 131.0
theme_override_font_sizes/font_size = 60
text = "100"

[node name="LevelBtns" type="Control" parent="."]
anchors_preset = 0
offset_left = 311.0
offset_top = 131.0
offset_right = 351.0
offset_bottom = 171.0

[node name="LevelBtn" parent="LevelBtns" instance=ExtResource("2_o23fe")]
layout_mode = 0
offset_left = 83.0
offset_top = 246.0
offset_right = 252.0
offset_bottom = 374.0
theme_override_font_sizes/font_size = 60
text = "1"
level = ExtResource("3_vjknv")

[node name="LevelBtn2" parent="LevelBtns" instance=ExtResource("2_o23fe")]
layout_mode = 0
offset_left = 307.0
offset_top = 157.0
offset_right = 476.0
offset_bottom = 285.0
theme_override_font_sizes/font_size = 60
text = "2"
level = ExtResource("4_tx854")

[node name="LevelBtn2_2" parent="LevelBtns" instance=ExtResource("2_o23fe")]
layout_mode = 0
offset_left = 309.0
offset_top = 307.0
offset_right = 478.0
offset_bottom = 435.0
theme_override_font_sizes/font_size = 60
text = "2'"
level = ExtResource("6_e6wkj")

[node name="LevelBtn3" parent="LevelBtns" instance=ExtResource("2_o23fe")]
layout_mode = 0
offset_left = 530.0
offset_top = 265.0
offset_right = 699.0
offset_bottom = 393.0
theme_override_font_sizes/font_size = 60
text = "3"
level = ExtResource("5_uc8n4")

[node name="LevelBtn4" parent="LevelBtns" instance=ExtResource("2_o23fe")]
layout_mode = 0
offset_left = 741.0
offset_top = 269.0
offset_right = 910.0
offset_bottom = 397.0
theme_override_font_sizes/font_size = 60
text = "4"
level = ExtResource("6_uc8n4")

[node name="LevelBtn5" parent="LevelBtns" instance=ExtResource("2_o23fe")]
layout_mode = 0
offset_left = 928.0
offset_top = 269.0
offset_right = 1097.0
offset_bottom = 397.0
theme_override_font_sizes/font_size = 60
text = "5"
level = ExtResource("7_bebfd")

[node name="GotoAchievementListBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 514.0
offset_top = 634.0
offset_right = 1222.0
offset_bottom = 725.0
theme_override_font_sizes/font_size = 60
text = "Goto Achievementes list"

[node name="GotoMarketBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 655.0
offset_top = 778.0
offset_right = 1006.0
offset_bottom = 869.0
theme_override_font_sizes/font_size = 60
text = "MARKET"

[node name="SaveBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 840.0
offset_top = 51.0
offset_right = 953.0
offset_bottom = 127.0
theme_override_font_sizes/font_size = 60
text = "SAVE"

[node name="GoBackBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 930.0
offset_right = 314.0
offset_bottom = 1014.0
theme_override_font_sizes/font_size = 55
text = "Go Back"

[connection signal="pressed" from="GotoAchievementListBtn" to="." method="_on_goto_achievement_list_btn_pressed"]
[connection signal="pressed" from="GotoMarketBtn" to="." method="_on_goto_market_btn_pressed"]
[connection signal="pressed" from="SaveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="pressed" from="GoBackBtn" to="." method="_on_go_back_btn_pressed"]
